<resources>
    <string name="app_name">AppPanel</string>
    <string name="modulo_1">Modulo 1</string>
    <string name="modulo_2">Modulo 2</string>
    <string name="modulo_3">Modulo 3</string>
    <string name="desconectado">Desconectado</string>
    <string name="conectado">Conectado</string>
    <string name="conectar">CONECTAR</string>
    <string name="actualizar">Actualizar</string>
    <string name="desconectar">Desconectar</string>
</resources>
